spectec/test/elab/neg/parse-hint-on-plain-bar-multi.spectec
;; Variant body with a leading bar; one of the cases is a plain type
;; carrying a hint, which is disallowed.

syntax foo = | nat hint(blah) | int
